--- a/ptp_rus/localisation/russian/eac_awci_l_russian.yml
+++ b/ptp_rus/localisation/russian/eac_awci_l_russian.yml
@@ -1,11 +1,12 @@
 ﻿l_russian:
 
  EAC_CARRIER_BEHAVIOR_DESC:1 "§HТактика носителя:§! Корабль будет держаться в отдалении (§Y250§!) и запускать штурмовики."
+ EAC_COMBAT_COMPUTER_CARRIER_AUTONOMOUS:0 "Автономный боевой компьютер (Носитель - Максимальное расстояние)"
  EAC_COMBAT_COMPUTER_CARRIER_ADVANCED:0 "Продвинутый боевой компьютер (Носитель - Максимальное расстояние)"
  EAC_COMBAT_COMPUTER_CARRIER_SAPIENT:0 "Разумный боевой компьютер (Носитель - Максимальное расстояние)"
- EAC_COMBAT_COMPUTER_CARRIER_PRECOG:0 "Прекогнитивный интерфейс (Носитель - Максимальное расстояние))"
+ EAC_COMBAT_COMPUTER_CARRIER_PRECOG:0 "Прекогнитивный интерфейс (Носитель - Максимальное расстояние)"
 
- # Fighters 
+ # Fighters
  EAC_FIGHTER_HANGAR_1:0 "Боевые истребители"
  EAC_FIGHTER_HANGAR_1_DESC:1 "Истребители обеспечивают базовые возможности ударного корабля, перехватывая вражеские бомбардировщики и ударные корабли в непосредственной близости от корабля."
  EAC_FIGHTER_HANGAR_2:0 "Улучшенные боевые истребители"
@@ -40,9 +41,9 @@
 
  # Bombers
  EAC_BOMBER_HANGAR_PROTON_TORPEDO:0 "Бомбардировщики с протонными пусковыми установками"
- EAC_BOMBER_HANGAR_PROTON_TORPEDO_DESC:0 "Оснащенные миниатюрными протонными торпедами, эти бомбардировщики запускают энергетические снаряды, состоящие из плотно сконцентрированных протонов, способных нанести тяжелый урон корпусу вражеских кораблей." 
+ EAC_BOMBER_HANGAR_PROTON_TORPEDO_DESC:0 "Оснащенные миниатюрными протонными торпедами, эти бомбардировщики запускают энергетические снаряды, состоящие из плотно сконцентрированных протонов, способных нанести тяжелый урон корпусу вражеских кораблей."
  EAC_BOMBER_HANGAR_NEUTRON_TORPEDO:0 "Бомбардировщики с нейтронными пусковыми установками"
- EAC_BOMBER_HANGAR_NEUTRON_TORPEDO_DESC:0 "Оснащенные миниатюрными нейтронными торпедами, эти бомбардировщики запускают энергетические снаряды, состоящие из плотно сконцентрированных нейтронов, способных нанести огромный ущерб корпусу вражеских кораблей." 
+ EAC_BOMBER_HANGAR_NEUTRON_TORPEDO_DESC:0 "Оснащенные миниатюрными нейтронными торпедами, эти бомбардировщики запускают энергетические снаряды, состоящие из плотно сконцентрированных нейтронов, способных нанести огромный ущерб корпусу вражеских кораблей."
 
  EAC_CARRIER_RADAR:0 "Радиолокатор носителя"
  EAC_CARRIER_RADAR_DESC:0 "Радиолокатор для корабля-носителя позволяет отслеживать цели на очень большом расстоянии (450)"
@@ -59,9 +60,28 @@
  EAC_BATTLESHIP_MID_AC:1 "Корпус улучшенного носителя"
  EAC_BATTLESHIP_STERN_AC:1 "Корма улучшенного носителя"
 
+ EAC_OFFSPRING_BATTLESHIP_BOW_AC:1 "Нос улучшенного носителя"
+ EAC_OFFSPRING_BATTLESHIP_MID_AC:1 "Корпус улучшенного носителя"
+ EAC_OFFSPRING_BATTLESHIP_STERN_AC:1 "Корма улучшенного носителя"
+
  ####################################
  # Cruiser
  ####################################
  EAC_CRUISER_BOW_S1:0 "Нос лёгкого носителя"
  EAC_CRUISER_MID_S2:0 "Корпус лёгкого носителя"
  EAC_CRUISER_STERN_P2:0 "Корма лёгкого носителя"
+
+ EAC_OFFSPRING_CRUISER_BOW_S1:0 "Нос лёгкого носителя"
+ EAC_OFFSPRING_CRUISER_MID_S2:0 "Корпус лёгкого носителя"
+ EAC_OFFSPRING_CRUISER_STERN_P2:0 "Корма лёгкого носителя"
+
+ ####################################
+ # BattleCruiser
+ ####################################
+ BATTLECRUISER_BOW_H2S2:0 "Носовой ангар"
+ BATTLECRUISER_MID1_L1H1:0 "Главный ангар"
+ BATTLECRUISER_STERN_S1H2:0 "Кормовой ангар"
+
+ OFFSPRING_BATTLECRUISER_BOW_H2S2:0 "Носовой ангар"
+ OFFSPRING_BATTLECRUISER_MID1_L1H1:0 "Главный ангар"
+ OFFSPRING_BATTLECRUISER_STERN_S1H2:0 "Кормовой ангар"
