--- a/ptp_rus/localisation/russian/eac_awsi_ship_sections_l_russian.yml
+++ b/ptp_rus/localisation/russian/eac_awsi_ship_sections_l_russian.yml
@@ -15,3 +15,4 @@
  EAC_MISSILE_STARBASE_SECTION:0 "Тяжелая $MISSILE_STARBASE_SECTION$"
  EAC_HANGAR_STARBASE_SECTION:0 "Тяжелая $HANGAR_STARBASE_SECTION$"
  EAC_CITADEL_STARBASE_SECTION:0 "Увеличенное орудийное ядро цитадели"
+ EAC_LASER_STARBASE_SECTION:0 "Сверхтяжелая $BATTERY_STARBASE_SECTION$"
