--- a/ptp_rus/localisation/russian/eac_awsi_techs_l_russian.yml
+++ b/ptp_rus/localisation/russian/eac_awsi_techs_l_russian.yml
@@ -1,6 +1,7 @@
 ﻿l_russian:
 
   # Starbase Defense Tech
+  mod_shipsize_ion_cannon_build_speed_mult:0 "Скорость строительства ионных батарей"
   eac_aw_tech_repeatable_starbase_defense_platform_capacity_add:0 "Защитные алгоритмы космической базы"
   eac_aw_tech_repeatable_starbase_defense_platform_capacity_add_desc:0 "Улучшенные алгоритмы управления увеличивают количество защитных платформ, которые мы можем контролировать."
 
@@ -12,4 +13,7 @@
   eac_tech_space_defense_station_heavy_hull_2:0 "Продвинутая обшивка тяжелой орудийной платформы"
   eac_tech_space_defense_station_heavy_hull_2_desc:0 "Последние модели обшивки для тяжелых платформ имеют оптимизированные поля структурной целостности и улучшенные переборки."
   eac_tech_large_gun_citadel:0 "Большие орудийные цитадели"
+
+  eac_tech_space_defense_station_heavy_hull_3:0 "Ультратяжелая обшивка боевых станций"
+  eac_tech_space_defense_station_heavy_hull_3_desc:0 "Новейшие корпуса тяжелых платформ имеют оптимизированные поля структурной целостности и улучшенные переборки."
   eac_tech_large_gun_citadel_desc:0 "Обновление звёздных баз до цитаделей, улучшающее их крепления и системы питания для поддержки больших турелей, а также добавляющее ракетные системы и орудия точечной обороны."
