--- a/ptp_rus/localisation/russian/vbp_hive_l_russian.yml
+++ b/ptp_rus/localisation/russian/vbp_hive_l_russian.yml
@@ -173,3 +173,6 @@
  mission_vbp_hive_break_apart_0_desc:0 "Мы постепенно ослабим Разум Улья, чтобы он потерял контроль над своими дронами. Со временем он умрет, а его дроны превратятся в безмозглых зверей.\n\n§EПо завершении этой миссии местные станут предразумными, и, если мы захотим, мы сможем занятся ими позже.§!\n\n"
  mission_vbp_hive_break_apart_1:0 "Сломать Разум Улья"
  mission_vbp_hive_break_apart_1_desc:0 "Мы постепенно ослабим Разум улья, чтобы он потерял контроль над своими дронами. Со временем он умрет, и его дроны под нашим руководством вернут себе индивидуальность.\n\n§EПо завершении этой миссии планета будет аннексирована, а её дроны станут нашими гражданами.§!\n\n"
+
+ format.primitive_hive.1: "[This.GetSpeciesName] <junior_hive>"
+ JuniorHive: "Юный улей"
